--- a/index.html
+++ b/index.html
@@ -131,33 +131,28 @@
   <main id="main">
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div class="container" data-aos="fade-up">
-
-        <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-            </ul>
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
-            </p>
-          </div>
-        </div>
-
+    <div class="row">
+      <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
+        <img src="assets/img/about.jpg" class="img-fluid" alt="">
       </div>
-    </section><!-- End About Section -->
+      <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
+        <h3>歡迎來到我們的咖啡廳</h3>
+        <p class="fst-italic">
+          我們提供最優質的咖啡，讓你感受到最美好的味覺體驗。
+        </p>
+        <ul>
+          <li><i class="ri-check-double-line"></i> 我們的咖啡豆都是精心挑選，品質保證。</li>
+          <li><i class="ri-check-double-line"></i> 我們的咖啡師都是經驗豐富，技術精湛。</li>
+          <li><i class="ri-check-double-line"></i> 我們提供舒適的環境和愉悅的音樂，讓你放鬆身心。</li>
+        </ul>
+        <p>
+          快來嚐嚐我們的咖啡，讓你的味蕾感受到最美好的滋味。
+        </p>
+      </div>
+    </div>
+
+  </div>
+</section><!-- End About Section -->
 
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients">
